--- a/Apps/Authentication.Server/Views/Account/Register.cshtml
+++ b/Apps/Authentication.Server/Views/Account/Register.cshtml
@@ -16,22 +16,22 @@
         <div asp-validation-summary="ModelOnly"></div>
         <div>
             <label asp-for="Email"></label><br />
-            <input name="Email" />
+            <input asp-for="Email" />
             <span asp-validation-for="Email"></span>
         </div>
         <div>
             <label asp-for="Password"></label><br />
-            <input name="Password" />
+            <input asp-for="Password" />
             <span asp-validation-for="Password"></span>            
         </div>
         <div>
             <label asp-for="PasswordConfirm"></label><br />
-            <input name="PasswordConfirm" />
+            <input asp-for="PasswordConfirm" />
             <span asp-validation-for="PasswordConfirm"></span>
         </div>
         <div>
             <input type="submit" value="Register" />
-        </div>      
+        </div>            
     </form>
 </body>
 </html>
