--- a/Apps/Authentication.Server/Views/Shared/_Layout.cshtml
+++ b/Apps/Authentication.Server/Views/Shared/_Layout.cshtml
@@ -8,6 +8,7 @@
 <html>
 <head>
     <link rel="stylesheet" href="~/css/site.css" />
+    <link rel="stylesheet" href="~/css/bootstrap.css" />
     <meta name="viewport" content="width=device-width" />
     <title>_Layout</title>
 </head>
