--- a/Apps/Authentication.Server/Views/Account/Login.cshtml
+++ b/Apps/Authentication.Server/Views/Account/Login.cshtml
@@ -1,38 +1,44 @@
 ﻿@model Authentication.Server.Models.ViewModels.LoginViewModel
 
-@{    
+@{
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div class="main-login">
-    <div class="form-login">
-        <h2>Log in</h2>
-        <form method="post" asp-controller="Account" asp-action="Login"
-              asp-route-returnUrl="@Model.ReturnUrl">
-            <div asp-validation-summary="ModelOnly"></div>
-            <div>
-                <label asp-for="Email"></label><br />
-                <input asp-for="Email" />
-                <span asp-validation-for="Email"></span>
-            </div>
-            <div>
-                <label asp-for="Password"></label><br />
-                <input asp-for="Password" />
-                <span asp-validation-for="Password"></span>
-            </div>
-            <div>
-                <label asp-for="RememberMe"></label><br />
-                <input asp-for="RememberMe" />
-            </div>
-            <div class="text-center">                                  
-                <a href="http://localhost:5100/Account/Register" class="txt2 hov1">
-                    Create an account?
-                </a>             
-            </div>
-            <div>
-                <input type="submit" value="Login" />
-            </div>
-        </form>
+<div class="container account-login-container">
+    <div class="row">
+        <div class="col-md-12">
+            <section>
+                <form asp-controller="Account" asp-action="Login" asp-route-returnurl="@ViewData["ReturnUrl"]" method="post" class="form-horizontal">
+                    <input type="hidden" asp-for="ReturnUrl" />
+                    <h4>ARE YOU REGISTERED?</h4>
+                    <div asp-validation-summary="All" class="text-danger"></div>
+                    <div class="form-group">
+                        <label asp-for="Email" class="control-label form-label"></label>
+                        <input asp-for="Email" class="form-control form-input form-input-center" />
+                        <span asp-validation-for="Email" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="Password" class="control-label form-label"></label>
+                        <input asp-for="Password" class="form-control form-input form-input-center" />
+                        <span asp-validation-for="Password" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <div class="checkbox">
+                            <label asp-for="RememberMe">
+                                <input asp-for="RememberMe" />
+                                @Html.DisplayNameFor(m => m.RememberMe)
+                            </label>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <button type="submit" class="btn btn-default btn-brand btn-brand-big" >&nbsp;LOG IN&nbsp;</button>
+                    </div>
+                    <p>
+                        <a asp-action="Register" asp-route-returnurl="@ViewData["ReturnUrl"]" class="text">Register as a new user?</a>
+                    </p>                  
+                </form>
+            </section>
+        </div>
     </div>
 </div>
 
