--- a/Apps/Authentication.Server/Views/Account/Register.cshtml
+++ b/Apps/Authentication.Server/Views/Account/Register.cshtml
@@ -1,31 +1,37 @@
 ﻿@model Authentication.Server.Models.ViewModels.RegisterViewModel
+
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div class="main-register">
-    <div class="form-register">
-        <h2>Register new user</h2>
-        <form method="post" asp-controller="Account" asp-action="Register">
-            <div asp-validation-summary="ModelOnly"></div>
-            <div>
-                <label asp-for="Email"></label><br />
-                <input asp-for="Email" />
-                <span asp-validation-for="Email"></span>
-            </div>
-            <div>
-                <label asp-for="Password"></label><br />
-                <input asp-for="Password" />
-                <span asp-validation-for="Password"></span>
-            </div>
-            <div>
-                <label asp-for="PasswordConfirm"></label><br />
-                <input asp-for="PasswordConfirm" />
-                <span asp-validation-for="PasswordConfirm"></span>
-            </div>
-            <div>
-                <input type="submit" value="Register" />
-            </div>
-        </form>
+<div class="container register-container">
+    <div class="row">
+        <div class="col-md-12">
+            <section>
+                <form asp-controller="Account" asp-action="Register" asp-route-returnurl="@ViewData["ReturnUrl"]" method="post" class="form-horizontal">
+                    <h4 class="order-create-section-title">CREATE NEW ACCOUNT</h4>
+                    <div asp-validation-summary="All" class="text-danger"></div>
+
+                    <div class="form-group">
+                        <label asp-for="Email" class="control-label form-label"></label>
+                        <input asp-for="Email" class="form-control form-input" />
+                        <span asp-validation-for="Email" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="Password" class="control-label form-label"></label>
+                        <input asp-for="Password" class="form-control form-input" />
+                        <span asp-validation-for="Password" class="text-danger"></span>
+                    </div>
+                    <div class="form-group ">
+                        <label asp-for="PasswordConfirm" class="control-label form-label"></label>
+                        <input asp-for="PasswordConfirm" class="form-control form-input" />
+                        <span asp-validation-for="PasswordConfirm" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <button type="submit" class="btn btn-default btn-brand">&nbsp;Register&nbsp;</button>
+                    </div>
+                </form>
+            </section>
+        </div>
     </div>
 </div>
