--- a/Apps/Authentication.Server/wwwroot/css/site.css
+++ b/Apps/Authentication.Server/wwwroot/css/site.css
@@ -1,31 +1,222 @@
-﻿.main-login {
-    position: fixed;
-    top: 40%;
-    left: 50%;
-    width: 30em;
-    height: 18em;
-    margin-top: -9em; /*set to a negative number 1/2 of your height*/
-    margin-left: -15em; /*set to a negative number 1/2 of your width*/
-    border: 1px solid #ccc;
-    background-color: #f3f3f3;
+﻿
+body {
+    margin-top: 65px;
 }
 
-.form-login {
-    padding-left: 35%;
+@font-face {
+    font-family: Montserrat;
+    font-weight: 400;
+    src: url("../fonts/Montserrat-Regular.eot?") format("eot"),url("../fonts/Montserrat-Regular.woff") format("woff"),url("../fonts/Montserrat-Regular.ttf") format("truetype"),url("../fonts/Montserrat-Regular.svg#Montserrat") format("svg")
 }
 
-.main-register {
-    position: fixed;
-    top: 40%;
-    left: 50%;
-    width: 30em;
-    height: 18em;
-    margin-top: -9em; /*set to a negative number 1/2 of your height*/
-    margin-left: -15em; /*set to a negative number 1/2 of your width*/
-    border: 1px solid #ccc;
-    background-color: #f3f3f3;
+@font-face {
+    font-family: Montserrat;
+    font-weight: 700;
+    src: url("../fonts/Montserrat-Bold.eot?") format("eot"),url("../fonts/Montserrat-Bold.woff") format("woff"),url("../fonts/Montserrat-Bold.ttf") format("truetype"),url("../fonts/Montserrat-Bold.svg#Montserrat") format("svg")
 }
 
-.form-register {
-    padding-left: 35%;
+body {
+    font-family: Montserrat,sans-serif;
+    min-width: 480px;
+}
+
+/* Wrapping element */
+/* Set some basic padding to keep content from hitting the edges */
+.body-content {
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
+/* Set widths on the form inputs since otherwise they're 100% wide */
+input,
+select,
+textarea {
+    max-width: 280px;
+}
+
+.btn-brand {
+    background-color: #83D01B;
+    color: white;
+    padding: 10px 20px 10px 20px;
+    border-radius: 0px;
+    border: none;
+    width: 255px;
+    display: inline-block;
+    text-align: center;
+    text-transform: uppercase;
+    height: 45px;
+    font-size: 16px;
+    font-weight: normal;
+}
+
+    .btn-brand::before {
+        content: '['
+    }
+
+    .btn-brand::after {
+        content: ']'
+    }
+
+    .btn-brand:hover:before {
+        padding-right: 5px;
+    }
+
+    .btn-brand:hover:after {
+        padding-left: 5px;
+    }
+
+.btn-brand-big {
+    width: 360px;
+    margin-top: 20px;
+}
+
+.btn-brand-small {
+    width: 45px;
+}
+
+    .btn-brand-small::before {
+        content: '';
+    }
+
+    .btn-brand-small::after {
+        content: '';
+    }
+
+    .btn-brand-small:hover:before {
+        content: '';
+        padding: 0;
+    }
+
+    .btn-brand-small:hover:after {
+        content: '';
+        padding: 0;
+    }
+
+.btn-brand-dark {
+    background-color: #00a69c;
+}
+
+.btn-brand:hover {
+    color: white;
+    background-color: #83D01B;
+    text-decoration: none;
+}
+
+.btn-brand-dark:hover {
+    background-color: #00a69c;
+}
+
+.form-label {
+    text-transform: uppercase;
+    font-weight: normal !important;
+    text-align: left;
+    margin-bottom: 10px !important;
+    color: #404040;
+}
+
+.form-input {
+    border-radius: 0;
+    padding: 10px;
+    height: 45px;
+}
+
+.form-input-small {
+    max-width: 100px !important;
+}
+
+.form-select {
+    border-radius: 0;
+    padding: 10px;
+    height: 45px;
+    width: 150px;
+}
+
+.validation-summary-errors li {
+    list-style: none;
+}
+
+.text {
+    color: #83D01B;
+}
+
+    .text:hover {
+        color: #83D01B;
+    }
+
+form .col-md-4 {
+    text-align: right;
+}
+
+.account-login-container {
+    min-height: 70vh;
+    text-align: center;
+    padding-top: 40px;
+}
+
+.account-register-container {
+    min-height: 70vh;
+    text-align: center !important;
+    align-content: center;
+}
+
+.register-container {
+    min-height: 70vh;
+    padding-top: 40px;
+    margin-bottom: 30px;
+    padding-left: 30px;
+}
+
+.input-validation-error {
+    border: 1px solid #fb0d0d;
+}
+
+.text-danger {
+    color: #fb0d0d;
+    font-size: 12px;
+}
+
+.form-horizontal h4 {
+    margin-top: 30px;
+}
+
+.form-horizontal .form-group {
+    margin-right: 0px !important;
+}
+
+.form-control:focus {
+    border-color: #83d01b;
+}
+
+.form-input-center {
+    margin: auto;
+}
+
+/* Hide/rearrange for smaller screens */
+@media screen and (max-width: 767px) {
+     Hide captions 
+    .carousel-caption {
+        display: none;
+    }
+
+    footer .text {
+        text-align: left;
+        margin-top: -15px;
+    } 
+}
+
+@media screen and (min-width: 992px) {
+    .form-input {
+        width: 360px;
+        max-width: 360px;
+    }
+}
+
+@media screen and (max-width: 415px) {
+    .account-login-container {
+        margin-left: -50px;
+    }  
+}
+
+.btn-brand-big {
+    color: rebeccapurple;
 }
