--- a/Apps/Authentication.Server/Views/Account/Register.cshtml
+++ b/Apps/Authentication.Server/Views/Account/Register.cshtml
@@ -4,7 +4,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div class="container register-container">
+<div class="container account-register-container">
     <div class="row">
         <div class="col-md-12">
             <section>
@@ -14,17 +14,17 @@
 
                     <div class="form-group">
                         <label asp-for="Email" class="control-label form-label"></label>
-                        <input asp-for="Email" class="form-control form-input" />
+                        <input asp-for="Email" class="form-control form-input form-input-center" />
                         <span asp-validation-for="Email" class="text-danger"></span>
                     </div>
                     <div class="form-group">
                         <label asp-for="Password" class="control-label form-label"></label>
-                        <input asp-for="Password" class="form-control form-input" />
+                        <input asp-for="Password" class="form-control form-input form-input-center" />
                         <span asp-validation-for="Password" class="text-danger"></span>
                     </div>
                     <div class="form-group ">
                         <label asp-for="PasswordConfirm" class="control-label form-label"></label>
-                        <input asp-for="PasswordConfirm" class="form-control form-input" />
+                        <input asp-for="PasswordConfirm" class="form-control form-input form-input-center" />
                         <span asp-validation-for="PasswordConfirm" class="text-danger"></span>
                     </div>
                     <div class="form-group">
